--- a/index.html
+++ b/index.html
@@ -1,9 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; URL='./web/home.html'"/>
-    <title>Direcionamento</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nordic Wave</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+
+<header class="d-flex justify-content-between align-items-center p-3 bg-dark text-white flex-wrap">
+  <div class="d-flex align-items-center gap-2">
+    <img src="assets/children-area.png" alt="Usuária" style="width: 30px; height: 30px;" />
+    <span>Bem-vindo(a) à Nordic Wave!</span>
+  </div>
+  <form class="flex-grow-1 mx-4" style="max-width: 400px;">
+    <input type="search" class="form-control" placeholder="O que você procura?" id="search-bar" aria-label="Pesquisar produtos">
+  </form>
+  <img src="assets/titulo2.png" alt="Logo Nordic Wave" style="height: 5vw;" />
+</header>
+
+<main class="container py-5">
+  <div class="d-flex align-items-center mb-4">
+    <h2 class="text-white mb-0">Produtos</h2>
+  </div>
+  <div class="row g-4" id="product-list"></div>
+</main>
+
+<button class="btn-cart" data-bs-toggle="modal" data-bs-target="#modalCarrinho" aria-label="Abrir carrinho" style="position: fixed; bottom: 30px; right: 30px; z-index: 1050; font-size: 2rem;">🛒</button>
+
+<!-- Modal Carrinho -->
+<div class="modal fade" id="modalCarrinho" tabindex="-1" aria-labelledby="modalCarrinhoLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content p-3">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalCarrinhoLabel">Carrinho de Compras</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-group" id="cart-list"></ul>
+        <div class="mt-3">
+          <strong>Total:</strong> R$ <span id="total-value">0.00</span>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-dark w-100" data-bs-target="#modalCheckout" data-bs-toggle="modal" data-bs-dismiss="modal">Concluir Compra</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Checkout -->
+<div class="modal fade" id="modalCheckout" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content p-4">
+      <div class="modal-header">
+        <h5 class="modal-title">Finalizar Pedido</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <h6>Dados para entrega</h6>
+          <div class="row mb-3">
+            <div class="col"><input class="form-control" placeholder="CEP" aria-label="CEP"></div>
+            <div class="col"><input class="form-control" placeholder="Número" aria-label="Número"></div>
+            <div class="col"><input class="form-control" placeholder="Complemento" aria-label="Complemento"></div>
+          </div>
+          <div class="row mb-3">
+            <div class="col"><input class="form-control" placeholder="Endereço" aria-label="Endereço"></div>
+            <div class="col"><input class="form-control" placeholder="Cidade" aria-label="Cidade"></div>
+            <div class="col"><input class="form-control" placeholder="Estado" aria-label="Estado"></div>
+          </div>
+
+          <div class="mb-3">
+            <strong>Total da compra:</strong> R$ <span id="total-checkout">0.00</span><br>
+            <strong>Frete:</strong> R$ 10.00<br>
+            <strong>Total final:</strong> R$ <span id="total-final">0.00</span>
+          </div>
+
+          <h6>Pagamento</h6>
+          <div class="row">
+            <div class="col">
+              <label class="form-label">PIX</label><br>
+              <img src="https://api.qrserver.com/v1/create-qr-code/?size=100x100&data=chavepix" alt="Pix QR">
+            </div>
+            <div class="col">
+              <label class="form-label">Cartão de Crédito</label>
+              <input class="form-control mb-2" placeholder="Número do Cartão" aria-label="Número do Cartão">
+              <input class="form-control mb-2" placeholder="Validade" aria-label="Validade">
+              <input class="form-control" placeholder="CVV" aria-label="CVV">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-success w-100">Pagar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer class="text-center py-3 bg-dark">
+  <img src="assets/titulo2.png" alt="Rodapé Dracwlaura's" style="height: 40px;">
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
+
+</body>
 </html>
